[package]
name = "ans"
version = "0.1.0"
authors = ["Arc Asumity <arcasumity@hotmail.com>"]
license = "GPL-3.0-or-later"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
humantime = "2.2.0"
humantime-serde = "1.1.1"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
